--- a/cv.html
+++ b/cv.html
@@ -28,6 +28,14 @@
       clinical settings.<br />
       Taking online programming courses (HTML, CSS, JS).
     </div>
+    <h2>Work examples</h2>
+    <a
+      href="https://liubovkoliada.github.io/lesson2_cv/cv.html"
+      target="_blank"
+      title="cv"
+    >
+      https://liubovkoliada.github.io/lesson2_cv/cv.html
+    </a>
     <h2>Professional Experiens</h2>
     <ol>
       <li>
