Add simple website

--- a/cv.html
+++ b/cv.html
@@ -22,6 +22,16 @@
     >
       facebook.com
     </a>
+
+    <h2>Homeworks</h2>
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_3/task_2/titles.html"
+    >
+      Hometask with anchors
+    </a>
+    <a href="https://liubovkoliada.github.io/lessons/homework_4/task_1">
+      My simple website
+    </a>
     <h2>Summary</h2>
     <div>
       Disciplined and confident Physician. Have experience in hospital and
