Add links to hometasks

--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,27 @@
   </head>
   <body>
     <h1>Liubov Koliada</h1>
+    <h2>Homeworks at Beetroot Academy</h2>
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_3/task_1/index.html"
+    >
+      Hometask with shopping list
+    </a>
+    <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_3/task_2/titles.html"
+    >
+      Hometask with anchors
+    </a>
+    <br />
+    <a href="https://liubovkoliada.github.io/lessons/homework_4/task_1">
+      My simple website
+    </a>
+    <br />
+    <a href="https://liubovkoliada.github.io/lessons/homework_4/task_2">
+      My hard website
+    </a>
+    <br />
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
     <span>Kyiv, Ukraine</span>
@@ -23,15 +44,6 @@
       facebook.com
     </a>
 
-    <h2>Homeworks</h2>
-    <a
-      href="https://liubovkoliada.github.io/lessons/homework_3/task_2/titles.html"
-    >
-      Hometask with anchors
-    </a>
-    <a href="https://liubovkoliada.github.io/lessons/homework_4/task_1">
-      My simple website
-    </a>
     <h2>Summary</h2>
     <div>
       Disciplined and confident Physician. Have experience in hospital and
