Add link to homework_5

--- a/cv.html
+++ b/cv.html
@@ -28,6 +28,10 @@
       My hard website
     </a>
     <br />
+    <a href="https://liubovkoliada.github.io/lessons/homework_5/index.html">
+      Homework_5 Photoshop</a
+    >
+    <br />
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
     <span>Kyiv, Ukraine</span>
