--- a/cv.html
+++ b/cv.html
@@ -32,6 +32,12 @@
       Homework_5 Photoshop</a
     >
     <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_6/task_1/index.html"
+    >
+      Homework_6 task_1 Photoshop</a
+    >
+    <br />
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
     <span>Kyiv, Ukraine</span>
