Add changes to cv

--- a/cv.html
+++ b/cv.html
@@ -44,6 +44,10 @@
       Homework_6 task_2 CSS Diner Shopping List</a
     >
     <br />
+    <a href="https://liubovkoliada.github.io/lessons/homework_7/index.html">
+      Homework_7 CSS Weather Forecast</a
+    >
+    <br />
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
     <span>Kyiv, Ukraine</span>
