--- a/cv.html
+++ b/cv.html
@@ -48,6 +48,20 @@
       Homework_7 CSS Weather Forecast</a
     >
     <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_8/task_1/index.html"
+    >
+      Homework_8 task_1 Cups</a
+    >
+    <br />
+    <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_8/task_2/index.html"
+    >
+      Homework_8 task_2 Cards</a
+    >
+    <br />
+
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
     <span>Kyiv, Ukraine</span>
