Add changes to CV

--- a/cv.html
+++ b/cv.html
@@ -60,6 +60,18 @@
       Homework_8 task_2 Cards</a
     >
     <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_9/task_1/index.html"
+    >
+      Homework_9 task_1</a
+    >
+    <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_9/task_2/index.html"
+    >
+      Homework_9 task_2</a
+    >
+    <br />
 
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
