--- a/cv.html
+++ b/cv.html
@@ -72,6 +72,18 @@
       Homework_9 task_2</a
     >
     <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_10/task_1/index.html"
+    >
+      Homework_10 task_1</a
+    >
+    <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_10/task_2/index.html"
+    >
+      Homework_10 task_2</a
+    >
+    <br />
 
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
