--- a/cv.html
+++ b/cv.html
@@ -84,6 +84,12 @@
       Homework_10 task_2</a
     >
     <br />
+    <a
+      href="https://liubovkoliada.github.io/lessons/homework_11/task_1/index.html"
+    >
+      Homework_11 task_1</a
+    >
+    <br />
 
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
