--- a/cv.html
+++ b/cv.html
@@ -90,6 +90,12 @@
       Homework_11 task_1</a
     >
     <br />
+    <a
+    href="https://liubovkoliada.github.io/lessons/homework_12/task_2/"
+  >
+    Homework_12 task_2</a
+  >
+  <br />
 
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
