--- a/cv.html
+++ b/cv.html
@@ -96,6 +96,12 @@
     Homework_12 task_2</a
   >
   <br />
+  <a
+  href="https://liubovkoliada.github.io/lessons/homework_13/index.html"
+>
+  Homework_13</a
+>
+<br />
 
     <img src="photo.jpeg" width="105" height="110" alt="Liubov Koliada" />
     <h2>Medical Expert</h2>
